MA-455: Load terminology from FHIR Code System JSON files